--- a/gui/Main.ui
+++ b/gui/Main.ui
@@ -29,10 +29,10 @@
    <widget class="Line" name="line_2">
     <property name="geometry">
      <rect>
-      <x>790</x>
-      <y>-10</y>
-      <width>31</width>
-      <height>841</height>
+      <x>780</x>
+      <y>0</y>
+      <width>51</width>
+      <height>831</height>
      </rect>
     </property>
     <property name="orientation">
@@ -60,8 +60,14 @@
       <height>501</height>
      </size>
     </property>
+    <property name="font">
+     <font>
+      <family>Agency FB</family>
+      <pointsize>20</pointsize>
+     </font>
+    </property>
     <property name="text">
-     <string>                                            视频播放区域</string>
+     <string>                                                 视频播放区域</string>
     </property>
     <property name="textFormat">
      <enum>Qt::AutoText</enum>
@@ -89,11 +95,17 @@
    <widget class="QLabel" name="label_road">
     <property name="geometry">
      <rect>
-      <x>830</x>
-      <y>0</y>
-      <width>101</width>
-      <height>41</height>
+      <x>810</x>
+      <y>10</y>
+      <width>131</width>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>仿宋</family>
+      <pointsize>16</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>检测路口：</string>
@@ -103,13 +115,19 @@
     <property name="geometry">
      <rect>
       <x>940</x>
-      <y>0</y>
-      <width>141</width>
-      <height>41</height>
+      <y>10</y>
+      <width>181</width>
+      <height>31</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <family>仿宋</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string/>
     </property>
    </widget>
    <widget class="Line" name="line">
@@ -129,7 +147,7 @@
     <property name="geometry">
      <rect>
       <x>810</x>
-      <y>80</y>
+      <y>100</y>
       <width>341</width>
       <height>251</height>
      </rect>
@@ -204,7 +222,7 @@
     <property name="geometry">
      <rect>
       <x>910</x>
-      <y>360</y>
+      <y>380</y>
       <width>141</width>
       <height>71</height>
      </rect>
@@ -220,6 +238,12 @@
       <width>141</width>
       <height>71</height>
      </size>
+    </property>
+    <property name="font">
+     <font>
+      <family>Agency FB</family>
+      <pointsize>10</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>导入原视频文件</string>
@@ -229,7 +253,7 @@
     <property name="geometry">
      <rect>
       <x>910</x>
-      <y>480</y>
+      <y>500</y>
       <width>141</width>
       <height>71</height>
      </rect>
@@ -245,6 +269,12 @@
       <width>141</width>
       <height>71</height>
      </size>
+    </property>
+    <property name="font">
+     <font>
+      <family>Agency FB</family>
+      <pointsize>10</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>查看违章帧</string>
@@ -254,7 +284,7 @@
     <property name="geometry">
      <rect>
       <x>910</x>
-      <y>600</y>
+      <y>620</y>
       <width>141</width>
       <height>71</height>
      </rect>
@@ -270,6 +300,12 @@
       <width>141</width>
       <height>71</height>
      </size>
+    </property>
+    <property name="font">
+     <font>
+      <family>Agency FB</family>
+      <pointsize>10</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>导出违章文本信息</string>
@@ -279,7 +315,7 @@
     <property name="geometry">
      <rect>
       <x>910</x>
-      <y>720</y>
+      <y>740</y>
       <width>141</width>
       <height>71</height>
      </rect>
@@ -296,6 +332,12 @@
       <height>71</height>
      </size>
     </property>
+    <property name="font">
+     <font>
+      <family>Agency FB</family>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
     <property name="text">
      <string>退出系统</string>
     </property>
@@ -303,11 +345,17 @@
    <widget class="QLabel" name="label_light">
     <property name="geometry">
      <rect>
-      <x>830</x>
-      <y>40</y>
-      <width>81</width>
-      <height>21</height>
+      <x>810</x>
+      <y>50</y>
+      <width>151</width>
+      <height>31</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>仿宋</family>
+      <pointsize>16</pointsize>
+     </font>
     </property>
     <property name="text">
      <string>红绿灯参数：</string>
@@ -316,14 +364,46 @@
    <widget class="QLabel" name="label_ligh_text">
     <property name="geometry">
      <rect>
-      <x>940</x>
-      <y>40</y>
-      <width>211</width>
+      <x>980</x>
+      <y>50</y>
+      <width>181</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>仿宋</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="Line" name="line_3">
+    <property name="geometry">
+     <rect>
+      <x>810</x>
+      <y>29</y>
+      <width>351</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line_5">
+    <property name="geometry">
+     <rect>
+      <x>807</x>
+      <y>79</y>
+      <width>361</width>
       <height>21</height>
      </rect>
     </property>
-    <property name="text">
-     <string>TextLabel</string>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
     </property>
    </widget>
   </widget>
@@ -340,8 +420,12 @@
     <property name="title">
      <string>菜单</string>
     </property>
+    <addaction name="action_SetRoad"/>
+    <addaction name="separator"/>
     <addaction name="actionDelet_existdata"/>
     <addaction name="delete_cache"/>
+    <addaction name="separator"/>
+    <addaction name="action_choose_road"/>
    </widget>
    <widget class="QMenu" name="menu_helper">
     <property name="title">
@@ -349,8 +433,15 @@
     </property>
     <addaction name="actionHelp"/>
    </widget>
+   <widget class="QMenu" name="menu_2">
+    <property name="title">
+     <string>自动化</string>
+    </property>
+    <addaction name="actionZidonghua"/>
+   </widget>
    <addaction name="menu"/>
    <addaction name="menu_helper"/>
+   <addaction name="menu_2"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionDelet_existdata">
@@ -366,6 +457,21 @@
   <action name="actionHelp">
    <property name="text">
     <string>查看使用手册</string>
+   </property>
+  </action>
+  <action name="actionZidonghua">
+   <property name="text">
+    <string>自动化检测</string>
+   </property>
+  </action>
+  <action name="action_choose_road">
+   <property name="text">
+    <string>查看已处理视频</string>
+   </property>
+  </action>
+  <action name="action_SetRoad">
+   <property name="text">
+    <string>设置路口</string>
    </property>
   </action>
  </widget>
