--- a/gui/RoadChoose.ui
+++ b/gui/RoadChoose.ui
@@ -6,32 +6,32 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>327</width>
-    <height>160</height>
+    <width>349</width>
+    <height>171</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>327</width>
-    <height>160</height>
+    <width>349</width>
+    <height>171</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>327</width>
-    <height>160</height>
+    <width>349</width>
+    <height>171</height>
    </size>
   </property>
   <property name="windowTitle">
-   <string>选择路口</string>
+   <string>选择路口对话框</string>
   </property>
   <widget class="QWidget" name="formLayoutWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>10</y>
-     <width>321</width>
-     <height>101</height>
+     <width>341</width>
+     <height>111</height>
     </rect>
    </property>
    <layout class="QFormLayout" name="formLayout">
@@ -60,8 +60,8 @@
   <widget class="QPushButton" name="pushButton_ok">
    <property name="geometry">
     <rect>
-     <x>130</x>
-     <y>120</y>
+     <x>150</x>
+     <y>130</y>
      <width>93</width>
      <height>28</height>
     </rect>
@@ -73,8 +73,8 @@
   <widget class="QPushButton" name="pushButton_quit">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>120</y>
+     <x>250</x>
+     <y>130</y>
      <width>93</width>
      <height>28</height>
     </rect>
@@ -83,21 +83,17 @@
     <string>取消</string>
    </property>
   </widget>
-  <zorder>formLayoutWidget</zorder>
-  <zorder>chooseRoad</zorder>
-  <zorder>pushButton_ok</zorder>
-  <zorder>pushButton_quit</zorder>
  </widget>
  <resources/>
  <connections>
   <connection>
-   <sender>pushButton_ok</sender>
+   <sender>pushButton_quit</sender>
    <signal>clicked()</signal>
    <receiver>Dialog_chooseRoad</receiver>
-   <slot>accept()</slot>
+   <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>226</x>
+     <x>326</x>
      <y>123</y>
     </hint>
     <hint type="destinationlabel">
@@ -107,13 +103,13 @@
    </hints>
   </connection>
   <connection>
-   <sender>pushButton_quit</sender>
+   <sender>pushButton_ok</sender>
    <signal>clicked()</signal>
    <receiver>Dialog_chooseRoad</receiver>
-   <slot>close()</slot>
+   <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>326</x>
+     <x>226</x>
      <y>123</y>
     </hint>
     <hint type="destinationlabel">
