--- a/gui/illegal_dialog.ui
+++ b/gui/illegal_dialog.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>835</width>
-    <height>512</height>
+    <width>891</width>
+    <height>580</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>835</width>
-    <height>502</height>
+    <width>891</width>
+    <height>580</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>835</width>
-    <height>512</height>
+    <width>891</width>
+    <height>580</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -28,11 +28,17 @@
   <widget class="Line" name="line">
    <property name="geometry">
     <rect>
-     <x>650</x>
+     <x>660</x>
      <y>0</y>
-     <width>21</width>
-     <height>511</height>
+     <width>41</width>
+     <height>581</height>
     </rect>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>41</width>
+     <height>581</height>
+    </size>
    </property>
    <property name="orientation">
     <enum>Qt::Vertical</enum>
@@ -42,10 +48,17 @@
    <property name="geometry">
     <rect>
      <x>690</x>
-     <y>10</y>
+     <y>0</y>
      <width>71</width>
-     <height>41</height>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Agency FB</family>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
    </property>
    <property name="text">
     <string>车牌号码：</string>
@@ -54,9 +67,9 @@
   <widget class="QLabel" name="plate_number">
    <property name="geometry">
     <rect>
-     <x>710</x>
-     <y>50</y>
-     <width>101</width>
+     <x>690</x>
+     <y>30</y>
+     <width>201</width>
      <height>21</height>
     </rect>
    </property>
@@ -68,10 +81,17 @@
    <property name="geometry">
     <rect>
      <x>690</x>
-     <y>110</y>
+     <y>60</y>
      <width>71</width>
-     <height>41</height>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Agency FB</family>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
    </property>
    <property name="text">
     <string>违法类别：</string>
@@ -83,9 +103,9 @@
   <widget class="QLabel" name="illegal_type">
    <property name="geometry">
     <rect>
-     <x>710</x>
-     <y>150</y>
-     <width>101</width>
+     <x>690</x>
+     <y>90</y>
+     <width>191</width>
      <height>21</height>
     </rect>
    </property>
@@ -93,36 +113,11 @@
     <string/>
    </property>
   </widget>
-  <widget class="QWidget" name="verticalLayoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>651</width>
-     <height>511</height>
-    </rect>
-   </property>
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <widget class="QLabel" name="label">
-      <property name="minimumSize">
-       <size>
-        <width>531</width>
-        <height>321</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>                                 点击下一张开始展示</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
   <widget class="QPushButton" name="before">
    <property name="geometry">
     <rect>
-     <x>700</x>
-     <y>250</y>
+     <x>730</x>
+     <y>270</y>
      <width>101</width>
      <height>51</height>
     </rect>
@@ -134,8 +129,8 @@
   <widget class="QPushButton" name="next">
    <property name="geometry">
     <rect>
-     <x>700</x>
-     <y>330</y>
+     <x>730</x>
+     <y>350</y>
      <width>101</width>
      <height>51</height>
     </rect>
@@ -147,9 +142,9 @@
   <widget class="Line" name="line_2">
    <property name="geometry">
     <rect>
-     <x>660</x>
-     <y>90</y>
-     <width>221</width>
+     <x>680</x>
+     <y>50</y>
+     <width>211</width>
      <height>20</height>
     </rect>
    </property>
@@ -160,10 +155,10 @@
   <widget class="Line" name="line_3">
    <property name="geometry">
     <rect>
-     <x>660</x>
-     <y>200</y>
+     <x>680</x>
+     <y>110</y>
      <width>211</width>
-     <height>16</height>
+     <height>20</height>
     </rect>
    </property>
    <property name="orientation">
@@ -173,14 +168,138 @@
   <widget class="QPushButton" name="delete_info">
    <property name="geometry">
     <rect>
-     <x>700</x>
-     <y>410</y>
+     <x>730</x>
+     <y>510</y>
      <width>101</width>
      <height>51</height>
     </rect>
    </property>
    <property name="text">
     <string>删除信息</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="ChangeButton">
+   <property name="geometry">
+    <rect>
+     <x>730</x>
+     <y>430</y>
+     <width>101</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>纠正信息</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>690</x>
+     <y>120</y>
+     <width>71</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Agency FB</family>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>所在路口：</string>
+   </property>
+  </widget>
+  <widget class="Line" name="line_4">
+   <property name="geometry">
+    <rect>
+     <x>680</x>
+     <y>170</y>
+     <width>211</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>690</x>
+     <y>180</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Agency FB</family>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>时间段：</string>
+   </property>
+  </widget>
+  <widget class="Line" name="line_5">
+   <property name="geometry">
+    <rect>
+     <x>680</x>
+     <y>230</y>
+     <width>211</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_Road_Belong">
+   <property name="geometry">
+    <rect>
+     <x>690</x>
+     <y>150</y>
+     <width>181</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_Time_Belong">
+   <property name="geometry">
+    <rect>
+     <x>690</x>
+     <y>210</y>
+     <width>201</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>681</width>
+     <height>581</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>681</width>
+     <height>581</height>
+    </size>
+   </property>
+   <property name="text">
+    <string>                                 点击下一张开始展示</string>
    </property>
   </widget>
  </widget>
